# ai-game-framework

./: .gitignore  Dockerfile  Makefile  README.md  aigf.html  compose.yml  entrypoint.sh  index.html  pyproject.toml  requirements.txt  search.js  setup.cfg
.github/workflows/: docs.yml  main.yml  publish.yml
aigf/: interface.html  main.html  manager.html
examples/: README.md
examples/dino_jump/: autonomous_agent.py  main.py  manual_agent.py
examples/dino_jump/viewer/: index.html
examples/hangman/: autonomous_agent.py  main.py  manual_agent.py
examples/hangman/viewer/: index.html
examples/race_game/: main.py  manual_agent.py
examples/race_game/viewer/: index.html
framework/: __init__.py  interface.py  main.py  manager.py
frontend/: framework.js
src/aigf/: __init__.py  interface.py  main.py  manager.py
src/aigf/frontend/: nord.css
tests/: test_agents.py  test_decorated.py  test_interface.py  test_loader.py  test_manager.py
