[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "A", "C4", "SIM", "RET", "ARG", "PTH"]
ignore = ["PTH", "ARG", "E402", "B027"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"

