[metadata]
name = ai-game-framework
version = 1.0.0
author = Mário Antunes
author_email = mario.antunes@ua.pt
description = AI Game Framework is a unified infrastructure designed to support the development and optimization of AI agents across various games.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/mariolpantunes/ai-game-framework
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    websockets >= 16.0

[options.packages.find]
where = src

[options.package_data]
aigf =
    frontend/*
